--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,4 +12,5 @@
   --plyr-range-thumb-background: black;
   --plyr-range-track-height: 1px;
   --plyr-range-thumb-shadow: none;
+  --plyr-control-spacing: 0;
 }
