added fonts styling

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,3 +16,9 @@
   --plyr-range-thumb-shadow: none;
   --plyr-control-spacing: 0;
 }
+
+.plyr__time + .plyr__time::before {
+  content: '/';
+  margin-right: 10px;
+  margin-right: 0;
+}
