* alle Columns zonder hoofdletter -> alle columns (+ lijkt terug in extra bold te staan, of hadden we dat zo afgesproken vorige keer?) + * kan de X eens je in het menu zit even groot als het symbool van hamburger?

--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -65,7 +65,7 @@
     font-family: 'Americana Std';
     src: url('AmericanaStd-ExtraBold.woff2') format('woff2'),
         url('AmericanaStd-ExtraBold.woff') format('woff');
-    font-weight: 700;
+    font-weight: extrabold;
     font-style: normal;
     font-display: swap;
 }
